# ProjectBackend

./: Cargo.toml  start.sh
app/: Cargo.toml
app/src/views/: home_view.rs
migrations/: 20210113203413_organizations.sql  20210113203449_teams.sql  20210113203452_projects.sql  20210113203517_teams_permissions.sql  20210113203547_roles_permissions.sql  20210113211423_targets.sql  20210113211428_tasks.sql  20210115230933_user_organizations.sql  20210115233209_user_sessions.sql  20210115233517_user_password.sql  20210116105538_user_personal_data.sql  20210116131644_unique_users_personal_data.sql  20210116131955_unique_user_password.sql  20210116151336_target_values.sql  20210116151339_target_data.sql  20210116163250_target_comments.sql  20210116192703_target_activity.sql
server/: Cargo.toml
server/migrations/: 20210113203356_users.sql  20210113203457_permissions.sql  20210113203522_users_permissions.sql  20210113203541_roles.sql  20210115230746_unique_users_email.sql  20210116100443_unique_session.sql  20210116211641_task_activity.sql  20210116214625_default_permissions.sql  20210116215556_default_roles.sql
server/src/: index.html  main.rs  routes.rs
server/src/records/: projects.rs  tasks.rs
server/src/records/users/: password.rs  personal_data.rs  session.rs
server/src/schema/: authorization.rs  organizations.rs  projects.rs  tasks.rs  users.rs
src/: main.rs  routes.rs
src/records/: .targets.rs.swp  mod.rs  organizations.rs  targets.rs  tasks.rs  users.rs
src/schema/: authorization.rs  mod.rs  organizations.rs  targets.rs  tasks.rs
(+4 files in other folders)
