[package]
name = "isomorphic-server"
version = "0.1.0"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
publish = false
edition = "2018"

[dependencies]
isomorphic-app = { path = "../app" }
env_logger = "0.6.1"
virtual-dom-rs = "0.6"
warp = "0.2.5"
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
async-graphql = "2.4.7"
async-graphql-warp = "2.4.7"
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
futures = "0.3"
sqlx = { version = "0.4.2", features = ["postgres", "migrate", "offline", "chrono", "runtime-tokio-rustls"] }
chrono = { version = "0.4.19", features = ["serde"] }
regex = "1.4.3"
bcrypt = "0.9.0"
rand = "0.8.1"
